# deskplanning

./: Cargo.toml  README.md
.claude/: settings.local.json
src/: main.rs
src-tauri/: tauri.conf.json
